--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -17,16 +17,21 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/jwt": "^10.0.0",
+    "1.1.1": "^1.0.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.18",
+    "decompress": "^4.2.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "fastify": "^5.6.1",
+    "mammoth": "^1.11.0",
+    "pdf-parse": "^2.2.9",
     "pg": "^8.16.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
+    "@types/decompress": "^4.2.7",
     "@types/node": "^24.7.1",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5",
