feat: add materials services/routes

--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -14,10 +14,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ai-sdk/google": "^2.0.20",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/multipart": "^9.2.1",
     "1.1.1": "^1.0.0",
+    "ai": "^5.0.68",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.18",
     "decompress": "^4.2.1",
@@ -33,6 +36,7 @@
     "@biomejs/biome": "^2.2.5",
     "@types/decompress": "^4.2.7",
     "@types/node": "^24.7.1",
+    "@types/pdf-parse": "^1.1.5",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.5",
     "tsx": "^4.20.6",
