--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -7,7 +7,11 @@
     "dev": "tsx --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +42,10 @@
     "@types/node": "^24.7.1",
     "@types/pdf-parse": "^1.1.5",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "drizzle-kit": "^0.31.5",
+    "supertest": "^7.1.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "ultracite": "^5.6.1",
