--- a/web/package.json
+++ b/web/package.json
@@ -30,8 +30,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.11"
