feat: seed admin

--- a/backend-tcc/.env.example
+++ b/backend-tcc/.env.example
@@ -1,5 +1,10 @@
 NODE_ENV=
 PORT=
 DATABASE_URL=
-JWT_SECRET= 
+JWT_SECRET=
 GOOGLE_GENERATIVE_AI_API_KEY=
+
+# Admin User Seed
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
+ADMIN_NAME=
