--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -35,6 +37,7 @@
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.2.9",
     "pg": "^8.16.3",
+    "resend": "^6.1.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
