--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
     "zod": "^4.1.11"
@@ -45,6 +47,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "ultracite": "^5.4.4",
