--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "tsx --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
-    "build": "tsc",
+    "build": "tsup src --out-dir build",
     "build:watch": "tsc --watch",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx --env-file .env --experimental-strip-types src/db/seed.ts",
+    "start": "node build/server.cjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -50,6 +54,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "drizzle-kit": "^0.31.5",
     "supertest": "^7.1.4",
+    "tsup": "^8.3.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "ultracite": "^5.6.1",
