feat: new command for seed

--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -13,7 +13,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx --env-file .env --experimental-strip-types src/db/seed.ts",
+    "db:seed:admin": "tsx --env-file .env --experimental-strip-types src/db/seed.ts",
+    "db:seed:prod": "node build/seed.cjs",
     "start": "node build/server.cjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
