--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -14,7 +14,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed:admin": "tsx --env-file .env --experimental-strip-types src/db/seed.ts",
-    "db:seed:prod": "node build/seed.cjs",
+    "db:seed:prod": "node build/db/seed.cjs",
     "start": "node build/server.cjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
