--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -8,13 +8,13 @@
   },
   "scripts": {
     "dev": "tsx --env-file .env --experimental-strip-types --no-warnings --watch src/server.ts",
-    "build": "tsup src --out-dir build",
+    "build": "tsup src --out-dir build && tsup --config tsup.seed.config.ts",
     "build:watch": "tsc --watch",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "db:seed:admin": "tsx --env-file .env --experimental-strip-types src/db/seed.ts",
-    "db:seed:prod": "node build/db/seed.cjs",
+    "db:seed:prod": "node build/seed.cjs",
     "start": "node build/server.cjs",
     "test": "vitest",
     "test:ui": "vitest --ui",
