--- a/backend-tcc/tsconfig.json
+++ b/backend-tcc/tsconfig.json
@@ -18,6 +18,6 @@
     "skipLibCheck": true,
     "moduleResolution": "node16",
     "strictNullChecks": true,
-    "types": ["vitest/globals"]
+    "types": ["node"]
   }
 }
