--- a/backend-tcc/package.json
+++ b/backend-tcc/package.json
@@ -27,6 +27,7 @@
   "description": "",
   "dependencies": {
     "@ai-sdk/google": "^2.0.20",
+    "@ai-sdk/groq": "^2.0.29",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/jwt": "^10.0.0",
@@ -37,8 +38,8 @@
     "dayjs": "^1.11.18",
     "decompress": "^4.2.1",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.6",
     "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.6",
     "fastify": "^5.6.1",
     "mammoth": "^1.11.0",
     "pdf-parse": "^2.2.9",
